--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -107,7 +107,7 @@
 
   .no-remotes {
     font-size: 20px;
-    color: var(--secodary-text-color);
+    color: var(--secondary-text-color);
     width: 100%;
     display: flex;
     justify-content: center;
