--- a/src/app/modals/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.scss
+++ b/src/app/modals/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.scss
@@ -61,7 +61,7 @@
       .shortcut-desc {
         text-align: left;
         width: 60%;
-        color: var(--secodary-text-color);
+        color: var(--secondary-text-color);
       }
     }
   }
