--- a/src/app/modals/preferences-modal/preferences-modal.component.scss
+++ b/src/app/modals/preferences-modal/preferences-modal.component.scss
@@ -120,7 +120,7 @@
             }
             p {
               font-size: 14px;
-              color: var(--secodary-text-color);
+              color: var(--secondary-text-color);
             }
           }
           .setting-control {
