--- a/src/app/modals/about-modal/about-modal.component.scss
+++ b/src/app/modals/about-modal/about-modal.component.scss
@@ -48,7 +48,7 @@
 
   .app-team {
     font-size: 16px;
-    color: var(----secodary-text-color);
+    color: var(----secondary-text-color);
     margin-bottom: 10px;
     font-weight: 500;
   }
