--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -308,7 +308,7 @@ $rclone-manager-dark-theme: mat.m2-define-dark-theme(
     --selected-tab-color: #e6e6e7;
     --hover-color: rgb(200, 200, 200);
     --app-text-color: #000000;
-    --secodary-text-color: #939090;
+    --secondary-text-color: #939090;
     --button-hover: #dddddd;
     --theme-border: #dbdbdb;
     --faint-blue: #f0f8ff;
@@ -328,7 +328,7 @@ $rclone-manager-dark-theme: mat.m2-define-dark-theme(
     --selected-tab-color: #2f2f30;
     --hover-color: rgb(55, 55, 55);
     --app-text-color: #ffffff;
-    --secodary-text-color: #939090;
+    --secondary-text-color: #939090;
     --button-hover: #333;
     --theme-border: #555;
     --faint-blue: #464d50;
